Changing Base64 implementation to use the official impl from the JDK